--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -1,7 +1,7 @@
 {
   "token": "Discord-Bot-Token-goes-here!",
-  "prefix": "k!",
-  "youtubeCookie": "",
+  "prefix": ">",
+  "youtubeCookie": "SIDCC=AJi4QfE9r_oZDzu6NfAMXCSaxzHi3FjL2EVq6JNhMG4jswR7H09bNE3-n86IiIoj7-di7bCMtoA",
   "spotify_api": {
         "enabled": false, "_COMMENT_": "Set it to false, if you want to scrape, when on true you can get spotify playlists with 100+ Tracks",
         "clientSecret": "",
