--- a/dashboard/settings.json
+++ b/dashboard/settings.json
@@ -1,7 +1,7 @@
 {
     "website" : {
-      "support": "https://discord.gg/milrato",
-      "domain": "http://your-domain.com"
+      "support": "https://dsc.gg/folody",
+      "domain": "http://exam.com"
     },
     "config": {
         "http": {
@@ -16,7 +16,7 @@
             "enabled": false,
             "port": 443
         },
-        "callback": "http://your-domain.com/callback",
+        "callback": "http://exam.com/callback",
         "clientID": "",
         "secret": ""
     }
